Added additional titles and descriptions

--- a/project.ipynb
+++ b/project.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "89c63e66",
    "metadata": {},
    "outputs": [],
@@ -23,12 +23,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "25add53e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Importing datasets\n",
+    "# Import datasets\n",
     "starbucks = pd.read_csv('data/directory.csv')\n",
     "income = pd.read_csv('data/archive/kaggle_income.csv')"
    ]
@@ -46,7 +46,10 @@
    "id": "0d4ce2e6",
    "metadata": {},
    "source": [
-    "Starbucks store locations will be limited to US regions."
+    "Data Constraints:\n",
+    "- Both Starbucks and US datasets published in 2017.\n",
+    "- Starbucks store locations limited to US country. \n",
+    "- Starbucks store limited to Starbucks brand (no Teavana)"
    ]
   },
   {
@@ -62,7 +65,26 @@
    "id": "adb32799",
    "metadata": {},
    "source": [
-    "## Analytics"
+    "## Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "11654cae",
+   "metadata": {},
+   "source": [
+    "### Starbucks Location Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35a47d08",
+   "metadata": {},
+   "source": [
+    "- Number of Starbucks locations by city/state/county\n",
+    "- Summary statistics of Starbucks locations per city/state/county\n",
+    "- City/state/county with highest number of Starbucks\n",
+    "- City/state/county with lowest number of Starbucks"
    ]
   },
   {
@@ -75,10 +97,114 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ef3b18c",
+   "metadata": {},
+   "source": [
+    "### US Income Dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bc8522f9",
+   "metadata": {},
+   "source": [
+    "- Summary statistics of US income by city/state/county\n",
+    "- City/state/county with highest average income\n",
+    "- City/state/county with lowest average income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a6fdb065",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4d7518fb",
+   "metadata": {},
+   "source": [
+    "### Starbucks and US Income Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "64232301",
+   "metadata": {},
+   "source": [
+    "- City/state/county with highest number of Starbucks (along with income statistics)\n",
+    "- City/state/county with lowest number of Starbucks (along with income statistics)\n",
+    "- City/state/county with highest income (along with number of Starbucks)\n",
+    "- City/state/county with lowest income (along with number of Starbucks)\n",
+    "- Cities/states/counties without Starbucks (along with income statistics)\n",
+    "- City/state/county furthest from the nearest Starbucks (along with income statistics)\n",
+    "- Correlation between Starbucks location and regional income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94179df5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b4b02fe9",
+   "metadata": {},
+   "source": [
+    "## Data Visualization"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f7a8ad46",
+   "metadata": {},
+   "source": [
+    "### Distribution of Number of Starbucks Locations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "316a959a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4dee6cc0",
+   "metadata": {},
+   "source": [
+    "### Starbucks Location vs. Regional Income"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b16f624b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90347f56",
+   "metadata": {},
+   "source": [
+    "## Starbucks Location Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "ec9c8abc",
    "metadata": {},
    "source": [
-    "## Training Model"
+    "### Training Model"
    ]
   },
   {
@@ -94,7 +220,7 @@
    "id": "10d5efdc",
    "metadata": {},
    "source": [
-    "## Testing Model"
+    "### Testing Model"
    ]
   },
   {
