--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -16,7 +16,15 @@
     "# Housekeeping\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt"
+    "import matplotlib.pyplot as plt\n",
+    "from scipy import stats\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import PolynomialFeatures\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.metrics import r2_score\n",
+    "import math\n",
+    "#from sklearn.metris import accuarcy_score, confusion_matrix"
    ]
   },
   {
@@ -394,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -464,7 +472,7 @@
        "      <td>6.6</td>\n",
        "      <td>0.1</td>\n",
        "      <td>4.3</td>\n",
-       "      <td>2.44</td>\n",
+       "      <td>12.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -488,7 +496,7 @@
        "      <td>5.3</td>\n",
        "      <td>0.2</td>\n",
        "      <td>5.5</td>\n",
-       "      <td>1.46</td>\n",
+       "      <td>7.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -512,7 +520,7 @@
        "      <td>5.1</td>\n",
        "      <td>0.1</td>\n",
        "      <td>5.1</td>\n",
-       "      <td>9.34</td>\n",
+       "      <td>46.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -536,7 +544,7 @@
        "      <td>6.1</td>\n",
        "      <td>0.1</td>\n",
        "      <td>5.5</td>\n",
-       "      <td>1.30</td>\n",
+       "      <td>6.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -560,7 +568,7 @@
        "      <td>5.6</td>\n",
        "      <td>0.2</td>\n",
        "      <td>4.9</td>\n",
-       "      <td>1.78</td>\n",
+       "      <td>8.9</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -608,7 +616,7 @@
        "      <td>6.3</td>\n",
        "      <td>0.2</td>\n",
        "      <td>3.1</td>\n",
-       "      <td>1.36</td>\n",
+       "      <td>6.8</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3138</th>\n",
@@ -632,7 +640,7 @@
        "      <td>3.4</td>\n",
        "      <td>0.2</td>\n",
        "      <td>4.2</td>\n",
-       "      <td>1.50</td>\n",
+       "      <td>7.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3139</th>\n",
@@ -656,7 +664,7 @@
        "      <td>6.6</td>\n",
        "      <td>0.4</td>\n",
        "      <td>6.4</td>\n",
-       "      <td>2.04</td>\n",
+       "      <td>10.2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3140</th>\n",
@@ -680,7 +688,7 @@
        "      <td>8.1</td>\n",
        "      <td>0.2</td>\n",
        "      <td>6.1</td>\n",
-       "      <td>3.00</td>\n",
+       "      <td>15.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3141</th>\n",
@@ -704,7 +712,7 @@
        "      <td>8.8</td>\n",
        "      <td>1.1</td>\n",
        "      <td>2.2</td>\n",
-       "      <td>1.26</td>\n",
+       "      <td>6.3</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -752,22 +760,22 @@
        "3141  47.871294         68.2        21.9           8.8         1.1   \n",
        "\n",
        "      Unemployment  Non White  \n",
-       "0              4.3       2.44  \n",
-       "1              5.5       1.46  \n",
-       "2              5.1       9.34  \n",
-       "3              5.5       1.30  \n",
-       "4              4.9       1.78  \n",
+       "0              4.3       12.2  \n",
+       "1              5.5        7.3  \n",
+       "2              5.1       46.7  \n",
+       "3              5.5        6.5  \n",
+       "4              4.9        8.9  \n",
        "...            ...        ...  \n",
-       "3137           3.1       1.36  \n",
-       "3138           4.2       1.50  \n",
-       "3139           6.4       2.04  \n",
-       "3140           6.1       3.00  \n",
-       "3141           2.2       1.26  \n",
+       "3137           3.1        6.8  \n",
+       "3138           4.2        7.5  \n",
+       "3139           6.4       10.2  \n",
+       "3140           6.1       15.0  \n",
+       "3141           2.2        6.3  \n",
        "\n",
        "[3142 rows x 37 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -778,7 +786,7 @@
     "df['Men'] = (df['Men']/df['TotalPop'])*100\n",
     "df['Women'] = (df['Women']/df['TotalPop'])*100\n",
     "df['Employed'] = (df['Employed']/df['TotalPop'])*100\n",
-    "df['Non White'] = (df['Hispanic']+df['Black']+df['Native']+df['Asian']+df['Pacific'])/5\n",
+    "df['Non White'] = (df['Hispanic']+df['Black']+df['Native']+df['Asian']+df['Pacific'])\n",
     "df"
    ]
   },
@@ -791,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -862,7 +870,7 @@
        "Transit       0.327334"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +890,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-9-9d2b17173b10>:2: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  features[\"White\"] = -1*features[\"White\"]\n",
+      "<ipython-input-9-9d2b17173b10>:3: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  features[\"Construction\"] = -1*features[\"Construction\"]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.7102587557674277, 0.7044152190834749, 0.7991136998194515, 0.6147236625301529, 0.011750623518672065, -0.009624397971810916, -0.0030441853941538533, -0.0026798679808566206, -0.004803833351081588, -0.006394081866484047]\n"
+     ]
+    }
+   ],
+   "source": [
+    "features = df[[\"TotalPop\",\"White\",\"Non White\",\"IncomePerCap\",\"Professional\",\"Construction\",\"Transit\"]]\n",
+    "features[\"White\"] = -1*features[\"White\"]\n",
+    "features[\"Construction\"] = -1*features[\"Construction\"]\n",
+    "features = features.apply(lambda x: stats.zscore(x))\n",
+    "target = df[[\"Count\"]]\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=0)\n",
+    "\n",
+    "#r2s = [0,0,0,0,0,0,0,0,0,0]\n",
+    "#i = 1\n",
+    "#while i < 11:\n",
+    "#    poly_model = make_pipeline(PolynomialFeatures(i), LinearRegression())\n",
+    "#    poly_model.fit(x_train, y_train)\n",
+    "#    predicts = poly_model.predict(x_test)\n",
+    "#    predicts = pd.DataFrame(predicts, columns = ['Prediction'])\n",
+    "#    predicts[\"Prediction\"] = predicts[\"Prediction\"].apply(lambda x: 0 if x < 0 else math.floor(x))\n",
+    "#    predicts[\"Prediction\"].to_numpy()\n",
+    "#    y_test[\"Count\"].to_numpy()\n",
+    "#    r_sq = r2_score(predicts[\"Prediction\"].to_numpy(),y_test[\"Count\"].to_numpy())\n",
+    "#    r2s[i-1] = r_sq\n",
+    "#    i=i+1\n",
+    "print(r2s)\n",
+    "max_r2 = max(r2s)\n",
+    "best_degree = r2s.index(max_r2)+1\n",
+    "print(\"Best degree for polymonial:\")\n",
+    "print(best_degree)\n",
+    "\n",
+    "    \n"
    ]
   },
   {
