--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -902,63 +902,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-9-9d2b17173b10>:2: SettingWithCopyWarning: \n",
+      "C:\\Anaconda\\lib\\site-packages\\pandas\\core\\indexing.py:966: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  features[\"White\"] = -1*features[\"White\"]\n",
-      "<ipython-input-9-9d2b17173b10>:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  features[\"Construction\"] = -1*features[\"Construction\"]\n"
+      "  self.obj[item] = s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.7102587557674277, 0.7044152190834749, 0.7991136998194515, 0.6147236625301529, 0.011750623518672065, -0.009624397971810916, -0.0030441853941538533, -0.0026798679808566206, -0.004803833351081588, -0.006394081866484047]\n"
+      "[0.7102587557674277, 0.7044152190834749, 0.7991136998194515, 0.6147236625301529, 0.011750623518672065, -0.009624397971810916, -0.0030441853941538533, -0.0026798679808566206, -0.004803833351081588, -0.006394081866484047]\n",
+      "Best degree for polynomial:\n",
+      "3\n"
      ]
     }
    ],
    "source": [
     "features = df[[\"TotalPop\",\"White\",\"Non White\",\"IncomePerCap\",\"Professional\",\"Construction\",\"Transit\"]]\n",
-    "features[\"White\"] = -1*features[\"White\"]\n",
-    "features[\"Construction\"] = -1*features[\"Construction\"]\n",
+    "features.loc[:,\"White\"] = -1*features.loc[:,\"White\"]\n",
+    "features.loc[:,\"Construction\"] = -1*features.loc[:,\"Construction\"]\n",
     "features = features.apply(lambda x: stats.zscore(x))\n",
     "target = df[[\"Count\"]]\n",
     "x_train, x_test, y_train, y_test = train_test_split(features, target, test_size=0.2, random_state=0)\n",
     "\n",
-    "#r2s = [0,0,0,0,0,0,0,0,0,0]\n",
-    "#i = 1\n",
-    "#while i < 11:\n",
-    "#    poly_model = make_pipeline(PolynomialFeatures(i), LinearRegression())\n",
-    "#    poly_model.fit(x_train, y_train)\n",
-    "#    predicts = poly_model.predict(x_test)\n",
-    "#    predicts = pd.DataFrame(predicts, columns = ['Prediction'])\n",
-    "#    predicts[\"Prediction\"] = predicts[\"Prediction\"].apply(lambda x: 0 if x < 0 else math.floor(x))\n",
-    "#    predicts[\"Prediction\"].to_numpy()\n",
-    "#    y_test[\"Count\"].to_numpy()\n",
-    "#    r_sq = r2_score(predicts[\"Prediction\"].to_numpy(),y_test[\"Count\"].to_numpy())\n",
-    "#    r2s[i-1] = r_sq\n",
-    "#    i=i+1\n",
+    "r2s = [0,0,0,0,0,0,0,0,0,0]\n",
+    "i = 1\n",
+    "while i < 11:\n",
+    "    poly_model = make_pipeline(PolynomialFeatures(i), LinearRegression())\n",
+    "    poly_model.fit(x_train, y_train)\n",
+    "    predicts = poly_model.predict(x_test)\n",
+    "    predicts = pd.DataFrame(predicts, columns = ['Prediction'])\n",
+    "    predicts.loc[:,\"Prediction\"] = predicts[\"Prediction\"].apply(lambda x: 0 if x < 0 else math.floor(x))\n",
+    "    r_sq = r2_score(predicts.loc[:,\"Prediction\"].to_numpy(),y_test.loc[:,\"Count\"].to_numpy())\n",
+    "    r2s[i-1] = r_sq\n",
+    "    i=i+1\n",
     "print(r2s)\n",
     "max_r2 = max(r2s)\n",
     "best_degree = r2s.index(max_r2)+1\n",
-    "print(\"Best degree for polymonial:\")\n",
-    "print(best_degree)\n",
-    "\n",
-    "    \n"
+    "print(\"Best degree for polynomial:\")\n",
+    "print(best_degree)"
    ]
   },
   {
