random testing substes for regression

--- a/analysis.ipynb
+++ b/analysis.ipynb
@@ -902,7 +902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -921,9 +921,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0.7102587557674277, 0.7044152190834749, 0.7991136998194515, 0.6147236625301529, 0.011750623518672065, -0.009624397971810916, -0.0030441853941538533, -0.0026798679808566206, -0.004803833351081588, -0.006394081866484047]\n",
+      "[0.602273593747941, 0.6925120419168798, 0.5268640559619615, -0.030946593362031937, 0.0052563681668076345, -0.008342680581757111, -0.005236960190191775, -0.007057276497509113, -0.006766693936097856, -0.006521981447173109]\n",
       "Best degree for polynomial:\n",
-      "3\n"
+      "2\n"
      ]
     }
    ],
@@ -938,12 +938,18 @@
     "r2s = [0,0,0,0,0,0,0,0,0,0]\n",
     "i = 1\n",
     "while i < 11:\n",
-    "    poly_model = make_pipeline(PolynomialFeatures(i), LinearRegression())\n",
-    "    poly_model.fit(x_train, y_train)\n",
-    "    predicts = poly_model.predict(x_test)\n",
-    "    predicts = pd.DataFrame(predicts, columns = ['Prediction'])\n",
-    "    predicts.loc[:,\"Prediction\"] = predicts[\"Prediction\"].apply(lambda x: 0 if x < 0 else math.floor(x))\n",
-    "    r_sq = r2_score(predicts.loc[:,\"Prediction\"].to_numpy(),y_test.loc[:,\"Count\"].to_numpy())\n",
+    "    j = 0\n",
+    "    r_sq = 0\n",
+    "    while j < 10:\n",
+    "        x_train_temp, x_test_temp, y_train_temp, y_test_temp = train_test_split(x_train, y_train, test_size=0.1)\n",
+    "        poly_model = make_pipeline(PolynomialFeatures(i), LinearRegression())\n",
+    "        poly_model.fit(x_train_temp, y_train_temp)\n",
+    "        predicts = poly_model.predict(x_test_temp)\n",
+    "        predicts = pd.DataFrame(predicts, columns = ['Prediction'])\n",
+    "        predicts.loc[:,\"Prediction\"] = predicts[\"Prediction\"].apply(lambda x: 0 if x < 0 else math.floor(x))\n",
+    "        r_sq = r_sq + r2_score(predicts.loc[:,\"Prediction\"].to_numpy(),y_test_temp.loc[:,\"Count\"].to_numpy())\n",
+    "        j = j + 1\n",
+    "    r_sq = r_sq/10\n",
     "    r2s[i-1] = r_sq\n",
     "    i=i+1\n",
     "print(r2s)\n",
